--- a/ViewTransitions/Example2/app/src/main/res/values/strings.xml
+++ b/ViewTransitions/Example2/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ViewTransition</string>
+    <string name="app_name">ViewTrans Example#2</string>
 </resources>
